<resources>
    <string name="app_name">Final project</string>
    <string name="logo_description">Logo of the application</string>
    <string name="start_button_text">Kick Off</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Wanna join the crew ?</string>
    <string name="have_account">Already in the crew ?</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="first_name">Full name</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="create_acc">Create your new account</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="search">Search</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="dynamic_num">1</string>
    <string name="dynamic_cart">0</string>
    <string name="new_collections">NEW COLLECTIONS</string>
    <string name="discount">Discount of 50% for first transaction</string>
    <string name="shop_now">SHOP NOW!!</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="remove">REMOVE</string>
    <string name="ur_cart">YOUR CART</string>
    <string name="summary">SUMMARY</string>
    <string name="Product_Name">Product Name</string>
    <string name="price">Price</string>
    <string name="checkout">Checkout</string>
    <string name="personal_info">PERSONAL INFORMATION</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email_add">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="mail_ad">Mailing Address</string>
    <string name="payment_info">PAYMENT INFORMATION</string>
    <string name="credit">CREDIT CARD</string>
    <string name="debit">DEBIT CARD</string>
    <string name="card_name">Card Holder Name</string>
    <string name="card_no">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="exp">Expiry Date (MM/YY)</string>
    <string name="submit_order">Submit Order</string>
    <string name="thank_you">Thank you for your purchase!</string>
    <string name="buy_more">Want to Buy More?</string>
</resources>