<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/backgroundColor"
    android:layout_marginBottom="10dp">

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bgdesign"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="8dp"
        android:paddingLeft="8dp">

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Product_Name"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"/>

        <!-- Quantity controls -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/decreaseQuantityButton"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@drawable/pro_bg"
                android:elevation="100dp"
                android:textColor="@color/black"
                android:text="@string/minus"/>

            <TextView
                android:id="@+id/productQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/dynamic_cart"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/increaseQuantityButton"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@drawable/pro_bg"
                android:elevation="100dp"
                android:textColor="@color/black"
                android:text="@string/plus"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/removeItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ripple_effect"
        android:text="@string/remove"/>
</LinearLayout>
