<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="70dp"
        android:background="@drawable/pro_bg"/>

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/productDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/accent_color"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/decrementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pro_bg"
            android:elevation="100dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dynamic_num"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="16dp" />

        <Button
            android:id="@+id/incrementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pro_bg"
            android:elevation="100dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/plus" />
    </LinearLayout>

    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_effect"
        android:textColor="@color/black"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"/>

    <Button
        android:id="@+id/goToCartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_cart"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple_effect"
        android:textColor="@color/black"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"/>

</LinearLayout>
