<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/bag"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ur_cart"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="30sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"/>

    <!-- Summary Container -->
    <LinearLayout
        android:id="@+id/summaryContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Heading for the Summary -->
        <TextView
            android:id="@+id/summaryHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/subtotalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/taxAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/checkoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="15sp"
            android:background="@drawable/ripple_effect"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>
